<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AllInvitedFragment">

    <LinearLayout
        android:id="@+id/linear_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/presentes"
                android:textColor="@color/colorTextPresent"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorTextAbsent"
                style="@style/textEditInvited"
                android:text="@string/ausentes" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorTextTotal"
                style="@style/textEditInvited"
                android:text="@string/total" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_present_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorTextPresent"
                style="@style/textEditInvitedContagem"
                android:text="@string/presentes" />

            <TextView

                android:id="@+id/text_absent_count"
                android:layout_width="0dp"
                android:textColor="@color/colorTextAbsent"
                style="@style/textEditInvitedContagem"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ausentes" />

            <TextView
                android:id="@+id/text_all_invited_count"
                android:layout_width="0dp"
                android:textColor="@color/colorTextTotal"
                style="@style/textEditInvitedContagem"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total" />

        </LinearLayout>
    </LinearLayout>







    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_all_invited"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_dashboard">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>